project(ft)

set(libft_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR} PARENT_SCOPE)
set(SOURCES
        source/ft_atoi.c
        source/ft_atol.c
        source/ft_bzero.c
        source/ft_countwords.c
        source/ft_intlen.c
        source/ft_isalnum.c
        source/ft_isalpha.c
        source/ft_isascii.c
        source/ft_isdigit.c
        source/ft_islower.c
        source/ft_isprint.c
        source/ft_isupper.c
        source/ft_itoa.c
        source/ft_lstadd.c
        source/ft_lstcount.c
        source/ft_lstdel.c
        source/ft_lstdelone.c
        source/ft_lstiter.c
        source/ft_lstmap.c
        source/ft_lstnew.c
        source/ft_lstrev.c
        source/ft_memalloc.c
        source/ft_memccpy.c
        source/ft_memchr.c
        source/ft_memcmp.c
        source/ft_memcpy.c
        source/ft_memdel.c
        source/ft_memmove.c
        source/ft_memrchr.c
        source/ft_memset.c
        source/ft_printf.c
        source/ft_sprintf.c
        source/ft_vsprintf.c
        source/ft_putchar.c
        source/ft_putchar_fd.c
        source/ft_putendl.c
        source/ft_putendl_fd.c
        source/ft_putnbr.c
        source/ft_putnbr_fd.c
        source/ft_putstr.c
        source/ft_putstr_fd.c
        source/ft_strcat.c
        source/ft_strchr.c
        source/ft_strclr.c
        source/ft_strcmp.c
        source/ft_strcpy.c
        source/ft_strdel.c
        source/ft_strdup.c
        source/ft_strequ.c
        source/ft_striter.c
        source/ft_striteri.c
        source/ft_strjoin.c
        source/ft_strlcat.c
        source/ft_strlen.c
        source/ft_strmap.c
        source/ft_strmapi.c
        source/ft_strncat.c
        source/ft_strncmp.c
        source/ft_strncpy.c
        source/ft_strnequ.c
        source/ft_strnew.c
        source/ft_strnstr.c
        source/ft_strrchr.c
        source/ft_strrev.c
        source/ft_strsplit.c
        source/ft_strstr.c
        source/ft_strsub.c
        source/ft_strtrim.c
        source/ft_swap.c
        source/ft_tolower.c
        source/ft_toupper.c
        source/get_args.c
        source/get_format.c
        source/get_next_line.c
        source/helpers_format.c
        source/helpers_ox.c
        source/helpers_signed.c
        source/helpers_u.c
        source/helpers_widestring.c
        source/other_helpers.c
        source/put_frmt_char.c
        source/put_frmt_pointer.c
        source/put_frmt_signed.c
        source/put_frmt_str.c
        source/put_frmt_unsigned.c)

add_library(${PROJECT_NAME} SHARED ${SOURCES})
target_include_directories(${PROJECT_NAME} SYSTEM PRIVATE .)
